<resources>
    <string name="app_name">Full Steam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip_date">Trip date</string>
    <string name="train_number">train number</string>
    <string name="number" translatable="true">number</string>
    <string name="name">name</string>
    <string name="train_name">train name</string>
    <string name="train_carrier">train carrier</string>
    <string name="start_station">start station</string>
    <string name="end_station">end station</string>
    <string name="distance">distance</string>
    <string name="price">price</string>
    <string name="duration">duration</string>
    <string name="start_time">start time</string>
    <string name="end_time">end time</string>
    <string name="avg_speed">avg speed</string>
    <string name="price_per_km">price per km</string>
    <string name="delay">delay</string>
    <string name="pkm">PKM</string>
    <string name="bike">bike</string>
    <string name="change">change</string>
    <string name="sleeping_car">sleeping car</string>
    <string name="train_brand">train brand</string>
    <string name="add_fab">add</string>
    <string name="arrow">arrow</string>
    <string name="add_trip">add trip</string>
    <string name="trip_list">trips</string>
    <string name="comment">comment</string>
    <string name="take_photo">Take photo</string>
    <string name="add_image_button">add image button</string>
    <string name="take_picture_button">take picture button</string>
    <string name="title_activity_login">Full Steam</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in with Google</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="preference_file_key">com.example.fullsteam.TOKEN</string>
    <string name="firebase_user_uid">uid</string>
    <string name="firebase_user_photo_uri">uri</string>
    <string name="firebase_user_display_name">display_name</string>
    <string name="bike_price">price</string>
    <string name="dep_delay">dep.</string>
    <string name="arr_delay">arr</string>
    <string name="login_background_image">login background image</string>
    <string name="welcome_to_full_steam">Welcome to Full Steam!</string>
    <string name="micha_strzelczyk">Michał Strzelczyk</string>
    <string name="logout">logout</string>
    <string name="settings">settings</string>
    <string name="edit_trip_fab">edit trip fab</string>
    <string name="stats">stats</string>
    <string name="save">save</string>
    <string name="time_spent_in_train">Time spent in train (min)</string>
    <string name="average_operating_speed_w_delays">Average operating speed (w/ delays)</string>
    <string name="number_of_travels_by_carrier">number of travels by carrier</string>
    <string name="most_popular_long_haul_trains">most popular long haul trains</string>
    <string name="distance_travelled_km">Distance travelled (km)</string>
    <string name="stats_icon_menu">stats icon menu</string>
</resources>