<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/Theme.MaterialComponents.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/login_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/login_background_image"
        android:scaleType="centerCrop"
        android:alpha="0.7"
        />

    <TextView
        android:id="@+id/login_welcome_text"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_full_steam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textColor="@color/ppMain"
        android:textFontWeight="700"
        android:alpha="0.6"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="sans-serif-medium"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:cornerRadius="16dp"
        android:padding="16dp"
        android:alpha="0.9"
        android:elevation="16dp"/>

    <TextView
        android:id="@+id/copyright_text"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/micha_strzelczyk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1"
        android:textColor="@color/white"
        android:alpha="0.8"
        app:drawableStartCompat="@drawable/ic_baseline_copyright_16" />


</androidx.constraintlayout.widget.ConstraintLayout>