<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/username_text"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:text="@string/hello_blank_fragment" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.166666667"
                android:text="@string/distance_travelled_km"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/total_distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/hello_blank_fragment"
                android:textSize="32sp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/distance_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:indicatorColor="@color/ppMain"
                app:trackColor="@color/teal_200" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.166666667"
                android:text="@string/time_spent_in_train"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/total_time_spent_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/hello_blank_fragment"
                android:textSize="32sp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/time_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:indicatorColor="@color/ppMain"
                app:trackColor="@color/teal_200" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.166666667"
                android:text="@string/average_operating_speed_w_delays"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/avg_operating_speed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:text="@string/hello_blank_fragment"
                android:textSize="32sp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/avg_operating_speed_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:indicatorColor="@color/ppMain"
                app:trackColor="@color/teal_200" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.166666667"
                android:text="@string/number_of_travels_by_carrier"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carriers_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <ProgressBar
                android:id="@+id/carriers_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:indicatorColor="@color/ppMain"
                app:trackColor="@color/teal_200" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:letterSpacing="0.166666667"
                android:text="@string/most_popular_long_haul_trains"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/long_haul_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <ProgressBar
                android:id="@+id/long_haul_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:indicatorColor="@color/ppMain"
                app:trackColor="@color/teal_200" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>